loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:3: error: not found: value poseBrosse
  poseBrosse();
  ^LoopStairs:12: error: not found: value poseBrosse
  poseBrosse();
  ^