loopfor.LoopStairs.scala.code
for (i <- 0 to 2)
	avance();
  poseBrosse();

for (i <- 0 to 7)
{
  leveBrosse();
	gauche();
	avance();
	droite();
	avance();
  poseBrosse();
}

for (i <- 0 to 2)
	avance();
	leveBrosse();